--- a/JYNetworkDemo/Base.lproj/Main.storyboard
+++ b/JYNetworkDemo/Base.lproj/Main.storyboard
@@ -1,11 +1,28 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="e1v-kQ-kfV">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="vLp-Zx-gqG">
+            <objects>
+                <navigationController id="e1v-kQ-kfV" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="BCc-52-77F">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Bhi-Pq-qxb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="D8c-pk-Bdi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-474" y="398"/>
+        </scene>
         <!--URL Session View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -18,16 +35,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="乔布斯.pdf" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iuk-56-wJu">
-                                <rect key="frame" x="16" y="28" width="288" height="30"/>
-                                <color key="backgroundColor" red="0.29019607843137257" green="0.53333333333333333" blue="0.79607843137254897" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="d1o-4C-pBJ"/>
-                                </constraints>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GC8-rE-NqD">
                                 <rect key="frame" x="16" y="273" width="288" height="21"/>
                                 <constraints>
@@ -37,9 +44,6 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="MWT-uf-llN">
-                                <rect key="frame" x="16" y="85" width="288" height="2"/>
-                            </progressView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gAg-Qf-hnD">
                                 <rect key="frame" x="16" y="518" width="288" height="30"/>
                                 <color key="backgroundColor" red="0.29019607843137257" green="0.53333333333333333" blue="0.79607843137254897" alpha="1" colorSpace="calibratedRGB"/>
@@ -50,24 +54,59 @@
                                     <action selector="downloadAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mr5-ie-JyU"/>
                                 </connections>
                             </button>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="MWT-uf-llN">
+                                <rect key="frame" x="16" y="141" width="288" height="2"/>
+                            </progressView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hWt-63-kXv">
+                                <rect key="frame" x="16" y="180" width="288" height="30"/>
+                                <color key="backgroundColor" red="0.2901960784" green="0.53333333329999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Background Session">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="KQ3-GZ-8GJ" kind="show" id="scI-KD-kwT"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Session:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TXZ-8k-XU0">
+                                <rect key="frame" x="16" y="151" width="65" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="乔布斯.pdf" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iuk-56-wJu">
+                                <rect key="frame" x="16" y="84" width="288" height="30"/>
+                                <color key="backgroundColor" red="0.29019607843137257" green="0.53333333333333333" blue="0.79607843137254897" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="d1o-4C-pBJ"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
-                        <color key="backgroundColor" red="0.7843137255" green="0.80000000000000004" blue="0.82745098039999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="hWt-63-kXv" secondAttribute="trailing" id="54A-rt-1co"/>
                             <constraint firstItem="iuk-56-wJu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="67e-J0-p0G"/>
                             <constraint firstItem="GC8-rE-NqD" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="8v2-Zr-KLM"/>
                             <constraint firstItem="GC8-rE-NqD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AWj-Hm-IHt"/>
                             <constraint firstItem="MWT-uf-llN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="CON-cM-tVX"/>
+                            <constraint firstItem="hWt-63-kXv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Chv-j9-EkN"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="gAg-Qf-hnD" secondAttribute="bottom" constant="20" id="ODa-XH-pXt"/>
                             <constraint firstItem="gAg-Qf-hnD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="R1d-60-Uym"/>
                             <constraint firstItem="gAg-Qf-hnD" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="RHo-hH-5JG"/>
                             <constraint firstItem="iuk-56-wJu" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="VGy-cl-ETO"/>
                             <constraint firstItem="GC8-rE-NqD" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Z5U-Pi-8Sb"/>
+                            <constraint firstItem="TXZ-8k-XU0" firstAttribute="top" secondItem="MWT-uf-llN" secondAttribute="bottom" constant="8" id="awy-0h-1Fq"/>
                             <constraint firstItem="GC8-rE-NqD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="bAy-18-VZO"/>
                             <constraint firstItem="MWT-uf-llN" firstAttribute="top" secondItem="iuk-56-wJu" secondAttribute="bottom" constant="27" id="fKu-JZ-kCF"/>
-                            <constraint firstItem="iuk-56-wJu" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="haU-TI-pa5"/>
+                            <constraint firstItem="hWt-63-kXv" firstAttribute="top" secondItem="TXZ-8k-XU0" secondAttribute="bottom" constant="8" id="h6U-jx-bp9"/>
+                            <constraint firstItem="iuk-56-wJu" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="haU-TI-pa5"/>
+                            <constraint firstItem="TXZ-8k-XU0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="mxB-Uj-fP9"/>
                             <constraint firstItem="MWT-uf-llN" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="wbM-w7-sMf"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="8G0-IE-fcY"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="button" destination="gAg-Qf-hnD" id="5Nf-2Y-6xj"/>
@@ -78,7 +117,70 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="305" y="418"/>
+            <point key="canvasLocation" x="132" y="392"/>
+        </scene>
+        <!--Background Session View Controller-->
+        <scene sceneID="8sx-P7-uOU">
+            <objects>
+                <viewController id="KQ3-GZ-8GJ" customClass="backgroundSessionViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yXd-vk-7pI"/>
+                        <viewControllerLayoutGuide type="bottom" id="AGf-rR-I5q"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Maj-u5-Dh1">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mqe-ge-i4I">
+                                <rect key="frame" x="45" y="84" width="230" height="230"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="230" id="QZG-jL-0Qq"/>
+                                    <constraint firstAttribute="height" constant="230" id="TMu-Gg-aUk"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B8z-EM-M0p">
+                                <rect key="frame" x="45" y="333" width="230" height="30"/>
+                                <color key="backgroundColor" red="0.2901960784" green="0.53333333329999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="加载图片">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="startLoadPictureAction:" destination="KQ3-GZ-8GJ" eventType="touchUpInside" id="37G-gS-ra0"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LhD-0k-dQT">
+                                <rect key="frame" x="45" y="383" width="230" height="30"/>
+                                <color key="backgroundColor" red="0.2901960784" green="0.53333333329999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="加载图片">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="testAction:" destination="KQ3-GZ-8GJ" eventType="touchUpInside" id="QF1-HB-jSp"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="LhD-0k-dQT" firstAttribute="trailing" secondItem="B8z-EM-M0p" secondAttribute="trailing" id="FQA-zp-qnv"/>
+                            <constraint firstItem="B8z-EM-M0p" firstAttribute="trailing" secondItem="mqe-ge-i4I" secondAttribute="trailing" id="Lk7-rp-Ei1"/>
+                            <constraint firstItem="B8z-EM-M0p" firstAttribute="leading" secondItem="mqe-ge-i4I" secondAttribute="leading" id="Ll6-YE-sKB"/>
+                            <constraint firstItem="mqe-ge-i4I" firstAttribute="top" secondItem="yXd-vk-7pI" secondAttribute="bottom" constant="20" id="W7O-OV-R1N"/>
+                            <constraint firstItem="mqe-ge-i4I" firstAttribute="centerX" secondItem="Maj-u5-Dh1" secondAttribute="centerX" id="YKQ-IJ-fcI"/>
+                            <constraint firstItem="LhD-0k-dQT" firstAttribute="top" secondItem="B8z-EM-M0p" secondAttribute="bottom" constant="20" id="Ybo-qe-ZcS"/>
+                            <constraint firstItem="B8z-EM-M0p" firstAttribute="top" secondItem="mqe-ge-i4I" secondAttribute="bottom" constant="19" id="hl8-TU-aBv"/>
+                            <constraint firstItem="LhD-0k-dQT" firstAttribute="leading" secondItem="B8z-EM-M0p" secondAttribute="leading" id="lpV-En-QfU"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="imageView" destination="mqe-ge-i4I" id="vWU-54-rXQ"/>
+                        <outlet property="loadBtn" destination="B8z-EM-M0p" id="N3V-no-UYI"/>
+                        <outlet property="testBtn" destination="LhD-0k-dQT" id="HZQ-Co-uan"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M7G-Yo-q2k" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="520" y="392"/>
         </scene>
     </scenes>
 </document>
