--- a/JYNetworkDemo/Sections/AFNetworking/AFDownloadFileViewController.xib
+++ b/JYNetworkDemo/Sections/AFNetworking/AFDownloadFileViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -51,6 +51,13 @@
                     <state key="normal" title="删除缓存"/>
                     <connections>
                         <action selector="deleteCacheAction:" destination="-1" eventType="touchUpInside" id="zgA-sc-qdW"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KwS-iE-o2j">
+                    <rect key="frame" x="204" y="235" width="75" height="30"/>
+                    <state key="normal" title="从缓存加载"/>
+                    <connections>
+                        <action selector="userDefaultCacheAction:" destination="-1" eventType="touchUpInside" id="pQJ-vJ-ByB"/>
                     </connections>
                 </button>
             </subviews>
