--- a/JYNetworkDemo/Sections/AFNetworking/AFDownloadFileViewController.xib
+++ b/JYNetworkDemo/Sections/AFNetworking/AFDownloadFileViewController.xib
@@ -7,6 +7,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AFDownloadFileViewController">
             <connections>
+                <outlet property="attachmentFileSizeLabel" destination="7U8-Pn-x0Y" id="vru-Hv-Pru"/>
+                <outlet property="attachmentNameLabel" destination="Amq-2N-v1F" id="m8f-ms-5aw"/>
+                <outlet property="attachmentTypeIcon" destination="9Yu-c4-6zr" id="1ej-mq-8Le"/>
+                <outlet property="downloadSwitchButton" destination="f86-lJ-rU8" id="1L8-Cl-H7q"/>
+                <outlet property="downloadView" destination="0FV-AA-JeF" id="Qad-Lg-9oD"/>
+                <outlet property="openButton" destination="yKy-ti-sKm" id="L21-ji-07z"/>
+                <outlet property="previewView" destination="Qtg-5a-W67" id="YBI-Au-seW"/>
                 <outlet property="progressLabel" destination="4aH-hB-T1X" id="qQi-AB-bp8"/>
                 <outlet property="progressView" destination="tKY-sy-qNy" id="aw1-bh-NZk"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -18,13 +25,20 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0FV-AA-JeF">
-                    <rect key="frame" x="8" y="63" width="304" height="96"/>
+                    <rect key="frame" x="16" y="320" width="304" height="59"/>
                     <subviews>
                         <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tKY-sy-qNy">
-                            <rect key="frame" x="8" y="43" width="288" height="2"/>
+                            <rect key="frame" x="57" y="20" width="171" height="2"/>
                         </progressView>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f86-lJ-rU8">
+                            <rect key="frame" x="236" y="5" width="34" height="32"/>
+                            <state key="normal" title="打开" image="suspend.png"/>
+                            <connections>
+                                <action selector="downloadSwitchAction:" destination="-1" eventType="touchUpInside" id="0dE-k3-QXW"/>
+                            </connections>
+                        </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="当前下载进度" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4aH-hB-T1X">
-                            <rect key="frame" x="8" y="67" width="288" height="21"/>
+                            <rect key="frame" x="8" y="38" width="288" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
@@ -33,36 +47,78 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4qY-OI-d02">
-                    <rect key="frame" x="204" y="178" width="75" height="30"/>
+                    <rect key="frame" x="184" y="447" width="75" height="30"/>
                     <state key="normal" title="从本地加载"/>
                     <connections>
                         <action selector="quickLookLocalFileAction:" destination="-1" eventType="touchUpInside" id="fb9-1Z-lqM"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EMv-KY-g2n">
-                    <rect key="frame" x="82" y="178" width="60" height="30"/>
+                    <rect key="frame" x="62" y="447" width="60" height="30"/>
                     <state key="normal" title="开始下载"/>
                     <connections>
                         <action selector="startDownload:" destination="-1" eventType="touchUpInside" id="bJ1-3D-ffg"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pbj-GM-qnT">
-                    <rect key="frame" x="82" y="235" width="60" height="30"/>
+                    <rect key="frame" x="62" y="485" width="60" height="30"/>
                     <state key="normal" title="删除缓存"/>
                     <connections>
                         <action selector="deleteCacheAction:" destination="-1" eventType="touchUpInside" id="zgA-sc-qdW"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KwS-iE-o2j">
-                    <rect key="frame" x="204" y="235" width="75" height="30"/>
+                    <rect key="frame" x="184" y="485" width="75" height="30"/>
                     <state key="normal" title="从缓存加载"/>
                     <connections>
                         <action selector="userDefaultCacheAction:" destination="-1" eventType="touchUpInside" id="pQJ-vJ-ByB"/>
                     </connections>
                 </button>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Word.png" translatesAutoresizingMaskIntoConstraints="NO" id="9Yu-c4-6zr">
+                    <rect key="frame" x="110" y="136" width="101" height="128"/>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="实习手册.doc" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Amq-2N-v1F">
+                    <rect key="frame" x="8" y="272" width="304" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yKy-ti-sKm">
+                    <rect key="frame" x="130" y="320" width="60" height="30"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
+                    <state key="normal" title="打开"/>
+                    <connections>
+                        <action selector="openAction:" destination="-1" eventType="touchUpInside" id="7CI-GF-agB"/>
+                    </connections>
+                </button>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qtg-5a-W67">
+                    <rect key="frame" x="8" y="291" width="304" height="21"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="13k" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7U8-Pn-x0Y">
+                            <rect key="frame" x="98" y="0.0" width="27" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sWb-AV-tn1">
+                            <rect key="frame" x="151" y="-4" width="60" height="30"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <state key="normal" title="在线预览"/>
+                            <connections>
+                                <action selector="onlinePreviewActin:" destination="-1" eventType="touchUpInside" id="p1B-ZX-1nb"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <point key="canvasLocation" x="213" y="153"/>
         </view>
     </objects>
+    <resources>
+        <image name="Word.png" width="128" height="128"/>
+        <image name="suspend.png" width="32" height="32"/>
+    </resources>
 </document>
